--- a/Assignment 2/assignment_2.ipynb
+++ b/Assignment 2/assignment_2.ipynb
@@ -918,16 +918,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac0d3ab7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_plot['Men'].max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6ac57485",
    "metadata": {},
    "outputs": [],
@@ -955,7 +945,7 @@
     "mpl.pyplot.figure(figsize=(25,12), dpi=120)\n",
     "plot = pd.plotting.parallel_coordinates(df_plot, 'IncomeClass', alpha=0.3, color=[\"green\", \"violet\", \"blue\"])\n",
     "plot.tick_params(axis='x', labelrotation=90)\n",
-    "plt.show()x\n",
+    "plt.show()\n",
     "# comment: rotate label"
    ]
   },
@@ -1910,12 +1900,11 @@
    "outputs": [],
    "source": [
     "# Your code\n",
-    "print('number of events: {}'.format(len(df['concept:name'].unique())))\n",
-    "print('number of cases: {}'.format(df.shape[0]))\n",
+    "print('number of events: {}'.format(df.shape[0]))\n",
+    "print('number of cases: {}'.format(len(log)))\n",
     "print('earliest timestamp: {}'.format(df.sort_values('time:timestamp')['time:timestamp'].iloc[0]))\n",
     "print('latest timestamp: {}'.format((df.sort_values('time:timestamp', ascending=False))['time:timestamp'].iloc[0]))\n",
-    "print('number of trace variants: {}'.format((df.sort_values('time:timestamp', ascending=False))['time:timestamp'].iloc[0]))\n",
-    "print(f'Number of traces: {len(log_converter.apply(df))}')"
+    "print('number of trace variants: {}'.format(len(variants_filter.get_variants(log))))"
    ]
   },
   {
@@ -1938,12 +1927,14 @@
    "source": [
     "# Your code\n",
     "variants_count = case_statistics.get_variant_statistics(log)\n",
-    "vc_df = (pd.DataFrame.from_dict(variants_count)).sort_values('count')\n",
+    "vc_df = (pd.DataFrame.from_dict(variants_count)).sort_values('count', ascending=True)\n",
+    "var_freq = [(len(vc_df)-index, row['count']) for index, row in vc_df.iterrows()]\n",
     "\n",
-    "display(vc_df)\n",
-    "\n",
-    "vc_df.plot(kind='line', x='variant', y='count', rot=0)\n",
-    "plt.xticks(rotation=90)\n",
+    "plt.figure(figsize=(10,10))\n",
+    "plt.scatter(*zip(*var_freq))\n",
+    "plt.ylabel('frequency')\n",
+    "plt.xlabel('variant')\n",
+    "plt.yscale('log')\n",
     "plt.show()\n",
     "# comment: change type to scatter plot, but then the labels are unreadable"
    ]
@@ -2105,7 +2096,7 @@
    "source": [
     "Observations:\n",
     "- 30% most frequent visit almost all lectures and take the assignments and the exam\n",
-    "- 50% most frequent: more students skip events and redo the lecture\n",
+    "- 50% most frequent: more students skip events\n",
     "- all logs: Looks similar to the 50% most frequent logs\n",
     "- exam at the end: also looks similar to the 50% most frequent logs but there are a few less skip connections\n",
     "The fitness for all the logs is the same so this value isn't interesting for observing differences"
