updatet some answers with more detail now

--- a/Assignment 2/assignment_2.ipynb
+++ b/Assignment 2/assignment_2.ipynb
@@ -333,11 +333,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0cc4044d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.isnull().sum().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2403298a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df.TotalPop == 0].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e1467a16",
    "metadata": {},
    "outputs": [],
    "source": [
     "np.warnings.filterwarnings('ignore', category=np.VisibleDeprecationWarning) # to suppress a warning (maybe because i don't use provided env?)\n",
+    "mpl.pyplot.figure(figsize=(8,6), dpi=120)\n",
     "df.boxplot(column=['TotalPop', 'Men', 'Women', 'Citizen', 'Employed'])"
    ]
   },
@@ -368,6 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mpl.pyplot.figure(figsize=(10,8), dpi=120)\n",
     "df.boxplot(column=['PrivateWork', 'PublicWork', 'SelfEmployed', 'FamilyWork', 'Unemployment', 'Poverty', 'ChildPoverty'])"
    ]
   },
@@ -378,6 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mpl.pyplot.figure(figsize=(12,8), dpi=120)\n",
     "df.boxplot(column=['Professional', 'Service', 'Office', 'Construction', 'Production', 'Drive', 'Carpool', 'Transit', 'Walk', 'OtherTransp', 'WorkAtHome'])"
    ]
   },
@@ -396,7 +419,8 @@
    "id": "bdb903e4",
    "metadata": {},
    "source": [
-    "the minimum value is 0 -> there are censuses without any entries"
+    "There are many missing values. ChildPoverty is the property with the most with 1118. Also in total 690 entries have a population of 0. Theses entries don't have any other properties meaning that they are 0 or NaN. One could question how that could be the case.\n",
+    "In general, the boxplots seam plausible."
    ]
   },
   {
@@ -444,7 +468,7 @@
     "print()\n",
     "nan_sums_cols = df.isna().sum()\n",
     "print('Missing values per column:')\n",
-    "print(nan_sums_cols)\n",
+    "print(nan_sums_cols.sort_values(ascending=False))\n",
     "print()\n",
     "print('Missing values per row aggregated:')\n",
     "print(nan_sums_rows.value_counts())"
@@ -455,7 +479,9 @@
    "id": "dc710a89",
    "metadata": {},
    "source": [
-    "In total 22469 (~0.89%) of the values are missing distributed over 2008 rows. Most values are missing for columns 'Income' and 'ChildPoverty'. All values for the columns 'State', 'County', 'TotalPop', 'Citizen' and 'Employed' are available. Most rows have no missing values. If there are missing values it seems to be either very little (1-3) or many at once (20 or 27)."
+    "In total 22469 (~0.89%) of the values are missing distributed over 2008 rows. Most values are missing for columns 'Income' and 'ChildPoverty'. All values for the columns 'State', 'County', 'TotalPop', 'Citizen' and 'Employed' are available. Most rows have no missing values. If there are missing values it seems to be either very little (1-3) or many at once (20 or 27).\n",
+    "\n",
+    "Also there seems to be often the same amount of missing values per category eg. the type of work. It is likely that in some regions, the question about the current status of work was not asked."
    ]
   },
   {
@@ -796,7 +822,7 @@
    "id": "325fd434",
    "metadata": {},
    "source": [
-    "It is observable that the income is in general higher than the income per capita (PCI) and the PCI is more spread. This could be because counties with a high population have an overall high income but the income averaged over the population is not so high. \n",
+    "It is observable that the income is in general higher than the income per capita (PCI) and the PCI is more spread. This could be because the income is not equally spread across the population. Maybe some poeple earn a lot more than others and therefore increase the mean but don't have a significant effect on the median.\n",
     "\n",
     "\n",
     "*income is median household income, pci is totalincome/capita so mean income*"
@@ -852,7 +878,7 @@
    "id": "b83099ef",
    "metadata": {},
    "source": [
-    "When we group multiple regions with different populations, the mean over the statistics depend on the population of the regions so that taking the mean over the percentages is only true, when the population of the regions is the same. This assumption however doen't (always) hold.\n",
+    "When we group multiple regions with different populations, the mean over the statistics depend on the population of the regions so that taking the mean over the percentages is only true, when the population of the regions is the same. This assumption however doen't (always) hold. Therefore, we have to group relative to the total population.\n",
     "\n",
     "*why would the same region have different number of totalPop?*"
    ]
@@ -957,10 +983,8 @@
     "Most observations aren't interesting and obvious like the negative correlation between men and women. Also the correlations in groups of the same category like \"drive\" and \"Carpool\" are obvious because if many people drive, they don't make use of carpools, which implies a negative correlation in this case.\n",
     "Meaningful Obervations: \n",
     "- positive correlation between the amount of production in an area and people driving\n",
-    "- negative correlation between Poverty and Professional Workers, same for child poverty\n",
-    "- positive correlation between Poverty and service workers\n",
-    "- positive correlation between poverty and amount of black people\n",
-    "- negative correlation between unemployment and amount of white people + asian people\n"
+    "- positive correlation between Poverty and ChildPoverty, indicating, that it is mostly 'preprogrammed' that the children of people living in poverty will also live in poverty\n",
+    "- negative correlation between ChildPoverty and Professional"
    ]
   },
   {
@@ -1038,7 +1062,7 @@
    "id": "e05ddfed",
    "metadata": {},
    "source": [
-    "We can observe that in most larger cities, the income is high. In the inner country, with cities with lower populations, the income is in general lower. An exception is the state of Florida, where the overall income seems to be low, even though there are some big cities like Orlando and Miami. We can also see that more people live in the East while especially northern states have low populations.\n",
+    "We can observe that in most larger cities, the income is high. These are often located at the coast. In the inner country, with cities with lower populations, the income is in general lower. An exception is the state of Florida, where the overall income seems to be low, even though there are some big cities like Orlando and Miami. We can also see that more people live in the East while especially northern states have low populations.\n",
     "\n",
     "*arent there quite some big green points in FLorida?*"
    ]
@@ -1137,7 +1161,7 @@
     "frequent_itemsets = apriori(customer_data_onehot, min_support = 0.3, use_colnames = True)\n",
     "frequent_itemsets['length'] = frequent_itemsets['itemsets'].apply(lambda x: len(x)) \n",
     "frequent_itemsets = frequent_itemsets[frequent_itemsets['length'] >= 3]\n",
-    "display(frequent_itemsets)"
+    "display(frequent_itemsets.sort_values('support', ascending=False))"
    ]
   },
   {
@@ -1277,7 +1301,7 @@
    "id": "eaacdd90",
    "metadata": {},
    "source": [
-    "We can obverse that pruning can reduce the number of itemsets by a significant amount. However the actual target what we get with the apriori algorithm is still a lot lower, meaning that the procedure is not sufficient to make predictions on the actual number of targets. All lines converge to zero which makes sense since the more items we take into account, the less fullfill the condition of being contained in a set after the apriori algorithm."
+    "We can obverse that pruning can reduce the number of itemsets by a significant amount, seeming that it is approximately about the same fraction for every support value. However the actual target what we get with the apriori algorithm is still a lot lower, meaning that the procedure is not sufficient to make predictions on the actual number of targets. All lines converge to zero which makes sense since the more items we take into account, the less fullfill the condition of being contained in a set after the apriori algorithm."
    ]
   },
   {
@@ -1607,7 +1631,8 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
-    "predictions = classifier_doc2vec.predict(test_vectors)\n",
+    "\n",
+    "predictions = classifier.predict(test_vectors)\n",
     "confusion_matrix(test.Character, predictions, labels=['harry', 'hermione', 'dumbledore', 'snape'])"
    ]
   },
@@ -2095,10 +2120,10 @@
    "metadata": {},
    "source": [
     "Observations:\n",
-    "- 30% most frequent visit almost all lectures and take the assignments and the exam\n",
-    "- 50% most frequent: more students skip events\n",
-    "- all logs: Looks similar to the 50% most frequent logs\n",
-    "- exam at the end: also looks similar to the 50% most frequent logs but there are a few less skip connections\n",
+    "- 30% most frequent visit almost all lectures and take the assignments and the exam as intented\n",
+    "- 50% most frequent: more students skip events like e.g. the final Q&A and some lectures\n",
+    "- all logs: Looks similar to the 50% most frequent logs but more connections like e.g. students who don't visit any more events after the first ones like lecture material 1 - 3 and may withraw from the course\n",
+    "- exam at the end: also looks similar to the 50% most frequent logs but averybody takes the two assignments\n",
     "The fitness for all the logs is the same so this value isn't interesting for observing differences"
    ]
   },
@@ -2206,8 +2231,7 @@
    "id": "10f81244",
    "metadata": {},
    "source": [
-    "Don't understand, why in these petri nets, there is no real order, in which the differnet events are taken, even though there are obviously overlaps.\n",
-    "# comment: formulate answer"
+    "It is interesting to see that only Lecture material 6 is viewed after the first assignment. Also, more students take the exam than complete both assignments."
    ]
   },
   {
