--- a/Assignment 2/assignment_2.ipynb
+++ b/Assignment 2/assignment_2.ipynb
@@ -436,7 +436,7 @@
     "num_missing = df.isna().sum().sum()\n",
     "print('Total number of entries: ', num_total)\n",
     "print('Total number of missing entries: ', num_missing)\n",
-    "print('Percentage: ', num_missing/num_total*100)\n",
+    "print('Percentage: ', num_missing/num_total*100, ' %')\n",
     "print()\n",
     "nan_sums_rows = df.isna().sum(axis=1)\n",
     "num_rows_with_missing = len(df.index) - nan_sums_rows.value_counts()[0]\n",
@@ -1609,7 +1609,7 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
-    "predictions = classifier_doc2vec.predict(test_vectors)\n",
+    "predictions = classifier.predict(test_vectors)\n",
     "confusion_matrix(test.Character, predictions, labels=['harry', 'hermione', 'dumbledore', 'snape'])"
    ]
   },
@@ -2482,16 +2482,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d63a84b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#b411303ba3ee"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "b6c1f95b",
    "metadata": {},
@@ -2509,13 +2499,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "99745afc",
+   "metadata": {},
+   "source": [
+    "Comment: \n",
+    "\n",
+    "We use 2 runs of map reduce. The first one aggregates the trace for each individual case and the second one computes the directly follows relations with number of occurences from the traces.\n",
+    "\n",
+    "The following files include the corresponding info:\n",
+    "\n",
+    "- First mapper function: map1.py\n",
+    "- First reducer function: reduce1.py\n",
+    "- Second mapper function: map2.py\n",
+    "- Seconds reducer function: reduce2.py\n",
+    "- Hadoop commands for MapReduce computation: hadoop_commands_6.2.txt\n",
+    "\n",
+    "In the file with hadoop commands we omit all commands that are necessary to move files between the local system and the docker container. \n",
+    "\n",
+    "Below, see the jupyter notebook script visualizing the directly-follows graph and the petri net that we discovered from the data resulting from the mapreduce computations."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d1c1918a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "import csv\n",
+    "from pm4py.visualization.dfg import visualizer as dfg_visualization\n",
+    "from pm4py.objects.conversion.dfg import converter as dfg_mining\n",
+    "# preprocessing\n",
+    "with open('./q6_code/q6res-final.txt') as file:\n",
+    "    file_reader = csv.reader(file, delimiter='\\t')\n",
+    "    dfg = dict()\n",
+    "    for row in file_reader:\n",
+    "        _from, _to = row[0].split(',')\n",
+    "        rel = (_from, _to)\n",
+    "        freq = int(row[1])\n",
+    "        dfg[rel] = freq\n",
+    "# Visualize Directly-follows-graph (DFG)\n",
+    "gviz = dfg_visualization.apply(dfg)\n",
+    "dfg_visualization.view(gviz)\n",
+    "dfg_visualization.save(gviz, \"./images/dfg.png\")\n",
+    "\n",
+    "# Discover and Visualize Workflow-Net\n",
+    "net, im, fm = dfg_mining.apply(dfg)\n",
+    "gviz = pn_visualizer.apply(net, im, fm)\n",
+    "pn_visualizer.view(gviz)\n",
+    "dfg_visualization.save(gviz, \"./images/pt.png\")\n"
    ]
   },
   {
@@ -2538,6 +2571,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "38cf3ab0",
+   "metadata": {},
+   "source": [
+    "The following files include the corresponding info:\n",
+    "\n",
+    "- Mapper function: map3.py\n",
+    "- Reducer function: reduce3.py\n",
+    "- Hadoop commands for MapReduce computation: hadoop_commands_6.3.txt\n",
+    "- total service times for cases: q6res-performance.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9465a3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "performance_data = pd.read_csv('./q6_code/q6res-performance.txt', sep=\"\\t\", header=None, names=['Case_ID', 'Duration'])\n",
+    "performance_data = performance_data.sort_values('Duration', ascending=False)\n",
+    "performance_data.head(100).plot.barh(x='Case_ID', y='Duration', figsize=(10,20))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "67fbf91d",
    "metadata": {},
    "source": [
@@ -2545,13 +2603,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8dc74c0",
+   "cell_type": "markdown",
+   "id": "9f3f616f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# your code"
+    "Output of the commands given in the file hadoop_commands_6.3.txt:\n",
+    "\n",
+    "DFL-final-log-10.tsv:\n",
+    "\n",
+    "    real    6m33.638s\n",
+    "    user    13m45.052s\n",
+    "    sys     0m33.543s\n",
+    "    \n",
+    "DFL-final-log-6.tsv:\n",
+    "\n",
+    "    real    1m35.713s\n",
+    "    user    2m6.424s\n",
+    "    sys     0m11.909s\n",
+    "\n",
+    "DFL-final-log-2.tsv:\n",
+    "\n",
+    "    real    0m23.560s\n",
+    "    user    0m45.050s\n",
+    "    sys     0m3.390s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ed60ade",
+   "metadata": {},
+   "source": [
+    "*Add discussion here*\n"
    ]
   }
  ],
